--- a/gb.html
+++ b/gb.html
@@ -10,10 +10,12 @@
 <body bgcolor="alan">
         <a href="01men.html">regresar a menú </a><br>
   <a href="#per">Personajes Principales</a>
-        <font color=" 4b3621">
-          <audio src="gravity falls.mp3"> cancion del libro</audio>
+  <audio src="gravity falls.mp3" controls></audio>
 
-        <center><h1>𓍊𓋼ºGravity falls 3º📕</h1></center>
+     
+
+        <font color=" 4b3621">
+             <center><h1>𓍊𓋼ºGravity falls 3º📕</h1></center>
 <p>¿De verdad crees conocer todos los secretos, códigos y creaturas que esconde el misterioso pueblo de Gravity Falls? Te presentamos el Diario 3 El diario escrito por uno de los gemelos Pines tras 6 años de investigación en Gravity Falls. Contiene todo lo que necesitas saber de la serie, lograrás descubrir los secretos jamas llegados en la pantalla, descifrars códigos ocultos y conocerás la historia que han vivido el tío abuelo Stan, Dipper y Mabel. De las famosas series animadas de Disney, Alex Hirsch te muestra este libro de Gravity Falls como un artículo de colección y entretenimiento en la que cada personaje y aventura lograra contarte la verdad de este increíble lugar e ilustradas por artistas únicos. ¿Estás listo para descubrir los misterios que esconde Gravity Falls?.</p>
 <center><img src="gb.jpeg" width="250px" height="345px"></center>
 <br>
